# teams-link-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  __main__.py  notifier.py  payload.py  screenshot.py
teams_alert_link/: __init__.py  notifier.py
teams_link_monitor/: __init__.py  notifier.py  screenshot.py
teams_notifier/: __init__.py  notifier.py
tests/: conftest.py  test_notifier.py  test_payload.py  test_screenshot.py
