[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teams-alert-link"
dependencies = [
    "requests>=2.34.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
]
authors = [{name = "Zachary Collins", email = "zacharym.collins@outlook.com"}]
keywords = [
    "Teams", 
    "Monitoring", 
    "Logging"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13.7"
classifiers = [
    "Development status :: 0 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest>=9.0.3",
    "requests_mock>=1.12.1",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
